# substrate-cex

max-encoded-len/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/balances/: .Cargo.toml.swp  Cargo.toml
pallets/balances/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: generate_node_key.sh  run.sh
